Fix hero overflow

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -2703,6 +2703,10 @@ hero-section[stylized] {
     padding: unset;
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    /* outline-width: 3px;
+    outline-style: solid;
+    outline-color: #000;
+    outline-offset: 0.4rem; */
 }
 
 hero-section[stylized] > div:nth-of-type(1) {
@@ -2718,6 +2722,7 @@ hero-section[stylized] > div:nth-of-type(2) {
     padding: 0;
     overflow: hidden;
     aspect-ratio: 4 / 3;
+    width: 100%;
     height: 100%;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
